<resources>
    <string name="wel">Welcome</string>
    <string name="tem">请输入温度</string>
    <string name="sub">submit</string>
    <string name="app_name">Hello</string>
    <string name="title_activity_score">score</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="teama">TeamA</string>
    <string name="score1">0</string>
    <string name="point3">+3 POINTS</string>
    <string name="point2">+2 POINTS</string>
    <string name="point1">+1 POINT</string>
    <string name="reset">RESET</string>
    <string name="title_activity_two_team">twoTeam</string>
    <string name="teamb">TeamB</string>
    <string name="scorea">0</string>
    <string name="scoreb">0</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="money">type RMB</string>
    <string name="result">HELLO</string>
    <string name="dollar">dollar</string>
    <string name="pound">pound</string>
    <string name="won">won</string>
    <string name="open">open score</string>
    <string name="btn_config">Config</string>
    <string name="save">save</string>
</resources>