<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wel"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/tem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="numberSigned|number"
        android:text="@string/tem" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:onClick="onClick"/>
</LinearLayout>