<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".twoTeam">

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007">

        <TextView
            android:id="@+id/teama2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="71dp"
            android:text="@string/teama"
            android:textSize="30dp"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/point1a"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn1a"
            android:text="@string/point1"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scorea" />

        <Button
            android:id="@+id/point3a"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn3a"
            android:text="@string/point3"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/point2a" />

        <TextView
            android:id="@+id/teamb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="71dp"
            android:text="@string/teamb"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scorea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/scorea"
            android:textSize="35dp"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teama2" />

        <TextView
            android:id="@+id/scoreb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/scoreb"
            android:textSize="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/teamb2" />

        <View
            android:id="@+id/view"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/point2a"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn2a"
            android:text="@string/point2"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/point1a" />

        <Button
            android:id="@+id/point2b"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn2b"
            android:text="@string/point2"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/point1b" />

        <Button
            android:id="@+id/point3b"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn3b"
            android:text="@string/point3"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/point2b" />

        <Button
            android:id="@+id/point1b"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:onClick="btn1b"
            android:text="@string/point1"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/scoreb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>